tests/errors/missing_type.err
Type Error: Can't find type information for function call
On file `tests/errors/missing_type.vrv` at 1:4
1: foo(a) { a }
      ^
